sand-macros/tests/cases/fail_sand_event_chain_non_sand_event_parent.stderr
error[E0277]: `NotASandEvent` is used as a bare `#[event]` handler parameter but does not implement `SandEvent`
  --> tests/cases/fail_sand_event_chain_non_sand_event_parent.rs:13:36
   |
13 |         SandEventDispatch::chain::<NotASandEvent>().into()
   |                                    ^^^^^^^^^^^^^ bare marker parameters require `T: SandEvent`
   |
help: the trait `SandEvent` is not implemented for `NotASandEvent`
  --> tests/cases/fail_sand_event_chain_non_sand_event_parent.rs:6:1
   |
 6 | pub struct NotASandEvent;
   | ^^^^^^^^^^^^^^^^^^^^^^^^
   = note: AdvancementEvent-backed events are stateless triggers handled through `Event<T>` (see sand_core::event::AdvancementEvent); SandEvent-backed events define custom tick/advancement dispatch and lifecycle via `impl SandEvent for NotASandEvent`
   = help: the following other types implement trait `SandEvent`:
             AnimalTamed
             AnimalsBreed
             AnyBlockPlaced
             AnyItemConsumed
             AnyItemCrafted
             AnyItemEnchanted
             BeeNestDestroyedEvent
             BrewPotionEvent
           and $N others
note: required by a bound in `SandEventDispatch::chain`
  --> $WORKSPACE/sand-core/src/events/mod.rs
   |
   |     pub fn chain<P: SandEvent + 'static>() -> ChainEventDispatch {
   |                     ^^^^^^^^^ required by this bound in `SandEventDispatch::chain`
